--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,18 @@ body {
     margin: 0;
     text-align: center;
     font-family: 'Stroud', sans-serif;
+    /*background-color: #200506;*/
+    width: 100vw;
+    height: 100vh;
+}
+
+canvas {
+    -webkit-box-shadow: 0px 8px 25px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 8px 25px -3px rgba(0,0,0,0.75);
+    box-shadow: 0px 8px 25px -3px rgba(0,0,0,0.75);
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
